Expanded Cheat Menu:
Whoopsie

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -47,29 +47,33 @@ ID,Text,Translation
 302535920000511,"Drone Move Speed",
 302535920000509,"Drone Rock To Concrete Speed",
 302535920000000,"-----------------------------------------------return these",
-302535920000892,,
+302535920000881,,
+302535920000882,,
 302535920000888,,
-302535920001080,,
-302535920001133,,
-302535920001193,,
-302535920001197,,
 302535920000885,,
 302535920000887,,
-302535920000353,,
+302535920000892,,
+302535920001080,,
 302535920001089,,
-302535920001065,,
-302535920000881,,
-302535920001138,,
-302535920000882,,
-302535920000607,"Instant Repair",
-302535920000221,"are built instantly.",
 302535920001112,,
+302535920001133,,
+302535920001138,,
+302535920001193,,
+302535920001197,,
 302535920000000,"--------------------------------------------------Init.lua",
-302535920000001,"<color 200 200 200>\nECM Active<color 0 0 0>:</color></color><color 128 255 128>\nF2 to toggle cheats menu\nDebug>Console Toggle History to toggle this console history.</color>\n\n\n",
+302535920000201,"Active",
+302535920000001,"F2 to toggle cheats menu\nDebug>Console Toggle History to toggle this console history.",
 302535920000000,"--------------------------------------------------CommonFunctions.lua",
-302535920000002,"Dumped: ",
+302535920000002,"Dumped",
 302535920000003,"Can't dump nothing",
 302535920000004,"Dump",
+302535920000040,"Exec Code on",
+302535920000041,"Add new entry to",
+302535920000138,"(Defaults to name/value of selected item).",
+302535920000165,"or",
+302535920000166,"BROKEN FUNCTION",
+302535920000353,"Scripts",
+302535920000793,"History",
 302535920000000,"--------------------------------------------------Defaults.lua",
 302535920000005,"Slow arsed hard drive, or something is wrong...",
 302535920000006,"Failed to save a settings to",
@@ -98,8 +102,6 @@ ID,Text,Translation
 302535920000031,"Find Nearest Resource ",
 302535920000032,"Select a resource to find",
 302535920000033,"Post a request on Nexus or Github or send an email to ",
-302535920000040,,
-302535920000041,,
 302535920000000,"--------------------------------------------------_uiExamine.lua",
 302535920000043,"Scrolls to text entered",
 302535920000044,"Goto text",
@@ -188,7 +190,6 @@ ID,Text,Translation
 302535920000135,"Well, I been working in a coal mine\nGoing down, down\nWorking in a coal mine\nWhew, about to slip down",
 302535920000136,"Select something that produces (air,water,electricity,other).",
 302535920000137,"Production is now",
-302535920000138,,
 302535920000139,"Production Amount",
 302535920000140,"Current production",
 302535920000141,"Select a building with workers.",
@@ -214,8 +215,6 @@ ID,Text,Translation
 302535920000163,"Radius",
 302535920000000,"--------------------------------------------------BuildingsMenu.lua",
 302535920000164,"Storage Amount Of Diner & Grocery",
-302535920000165,,
-302535920000166,,
 302535920000167,"Change how much food is stored in them (less chance of starving colonists when busy).",
 302535920000168,"Triboelectric Scrubber Radius",
 302535920000169,"\nLadies and gentlemen, this is your captain speaking. We have a small problem.\nAll four engines have stopped. We are doing our damnedest to get them going again.\nI trust you are not in too much distress.",
@@ -250,7 +249,6 @@ ID,Text,Translation
 302535920000198,"Sanatoriums Cure All",
 302535920000199,"Toggle curing all traits (use \"Show All Traits\" & \"Show Full List\" to manually set).",
 302535920000200,"Schools Train All",
-302535920000201,,
 302535920000202,"Sanatoriums & Schools: Show All Traits",
 302535920000203,"Shows all appropriate traits in Sanatoriums/Schools side panel popup menu.",
 302535920000204,"Sanatoriums & Schools: Show Full List",
@@ -270,6 +268,7 @@ ID,Text,Translation
 302535920000218,"No Chance Of Break",
 302535920000219,"will never break.",
 302535920000220,"Instant Build",
+302535920000221,"are built instantly.",
 302535920000222,"Unlimited Wonders",
 302535920000223,"Unlimited wonder build limit (restart game to toggle).",
 302535920000224,"Show Hidden Buildings",
@@ -657,6 +656,7 @@ ID,Text,Translation
 302535920000604,"If you have any buildings with those yellow grid marks around them (or anywhere else), then this will remove them.",
 302535920000605,"Project Morpheus Radar Fell Down",
 302535920000606,"Sometimes the blue radar thingy falls off.",
+302535920000607,"Instant Repair",
 302535920000608,"Instantly repair all broken pipes and cables.",
 302535920000609,"Attach Buildings To Nearest Working Dome",
 302535920000610,"If you placed inside buildings outside and removed the dome they're attached to; use this.",
@@ -722,7 +722,7 @@ ID,Text,Translation
 302535920000670,"Never Show Hints",
 302535920000671,"No more hints ever.",
 302535920000672,"About ECM",
-302535920000673,"Expanded Cheat Menu info dialog.",
+302535920000673,"info dialog.",
 302535920000674,"Report Bug",
 302535920000675,"Report Bug\n\nThis doesn't go to ECM author, if you have a bug with ECM; see Help>About.",
 302535920000676,"Reset ECM Settings",
@@ -840,7 +840,6 @@ ID,Text,Translation
 302535920000790,"Set Outside Workplace Radius",
 302535920000791,"Current distance: ",
 302535920000792,"\n\nYou may not want to make it too far away unless you turned off suffocation.",
-302535920000793,,
 302535920000794,"Uses same code as game to pick death ages.",
 302535920000795,"Logan's Run (Novel)",
 302535920000796,"Logan's Run (Movie)",
@@ -1109,6 +1108,7 @@ ID,Text,Translation
 302535920001064,"Mouse",
 302535920001066,"What used to be the default for this ECM setting",
 302535920001067,"Zoom",
+302535920001065,"Menu Option",
 302535920000000,"--------------------------------------------------HelpFunc.lua",
 302535920001068,"Interface in screenshots",
 302535920001069,"Interface",
@@ -1273,3 +1273,4 @@ ID,Text,Translation
 302535920001235,"can hold.",
 302535920001236,"Double amount of reneagades this station can negate (currently",
 302535920001237,"Reselect to update amount.",
+302535920000000,"Expanded Cheat Menu",
