Expanded Cheat Menu:
Added:
Fixes>Reset All Colonists: Helps with certain freezing issues (mouse scrolls, WASD doesn't).

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,5 +1,4 @@
 ID,Text,Translation
-302535920000939,,
 302535920000955,,
 302535920001001,,
 302535920001014,,
@@ -178,7 +177,6 @@ This can take time on something like the ""Building"" metatable",
 Which you can then mess around with some more in the console.",
 302535920000053,"Attaches",
 302535920000054,"Any objects attached to this object.",
-302535920000055,,
 302535920000056,"Trace Log",
 302535920000057,"relative times",
 302535920000058,"[ShowIt]",
@@ -738,6 +736,8 @@ The map disaster settings don't do jack.",
 302535920000579,"Storage Mechanized Depots",
 302535920000580,"Change mechanized depot storage capacity.",
 0,"FixesMenu.lua",
+302535920000939,"Fix certain freezing issues (mouse still moves screen, keyboard doesn't), will lower comfort by about 20.",
+302535920000055,"Reset All Colonists",
 302535920000581,"Toggle Collisions On Selected Object",
 302535920000582,"Just in case you get something stuck somewhere.",
 302535920000583,"Rebuild Walkable Points In Domes",
