Expanded Cheat Menu:
Added:
Help>Text: Hopefully useful info for modders.
History textbox to Console dialog (technically in the previous commit).
Debug>XWindowInspector Toggle: Adds an option to view/edit windows to Console (Scripts).

Fixed:
Issue with custom OnMsgs.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,7 +1,9 @@
 ID,Text,Translation
-302535920000955,,
-302535920001001,,
-302535920001014,,
+302535920000292,"XWindowInspector Toggle",
+302535920001014,"Allows you to use XWindowInspector (sorry non-windows users), see Console after restart.
+Messes up the fonts for now.
+
+Restart to toggle.",
 302535920001019,,
 302535920001020,,
 302535920001023,,
@@ -133,7 +135,7 @@ If you can delete it and still get this error; please send it and this log to th
 302535920000011,"Missing Description",
 0,"_Functions.lua",
 302535920000012,"Error borked building",
-302535920000013,"FireFuncAfterChoice: This shouldn't happen.",
+302535920000013,"This shouldn't happen... Well shit something's bork bork bork.",
 302535920000015,"Can't colour object",
 302535920000017,"Use the colour picker (dbl right-click for instant change).",
 302535920000018,"Don't use the colour picker: Numbers range from -255 to 255.",
@@ -152,7 +154,9 @@ You can copy and paste numbers if you want (click item again after picking).",
 302535920000028,"Find Resource",
 302535920000029,"Error: Cannot find any",
 302535920000032,"Select a resource to find",
-0,"_uiExamine.lua",
+0,"Examine.lua",
+302535920001001,"Slight issue with %s you may safely ignore the following error or three.",
+302535920000955,"Handle",
 302535920000520,"Parents",
 302535920000525,"Ancestors",
 302535920000553,"Examine parent and ancestor objects.",
@@ -189,17 +193,17 @@ Which you can then mess around with some more in the console.",
 302535920000066,"Long",
 302535920000067,"TraceCall",
 302535920000068,"No examining this object kthxbye",
-302535920000070,"Opens attachments in new examine window.
+302535920000070,"Shows list of attachments.
 This",
 302535920000071,"has",
-0,"_uiExecCode.lua",
+0,"ExecCode.lua",
 302535920000040,"Exec Code on",
 302535920000051,"Exec",
 302535920000072,"Paste or type code to be executed here.",
 302535920000073,"Exec and close dialog (Enter can also be used).",
 302535920000075,"Insert Obj",
 302535920000076,"At caret position inserts",
-0,"_uiListChoiceCustom.lua",
+0,"ListChoiceCustom.lua",
 302535920000077,"You can enter a custom value to be applied.
 
 Warning: Entering the wrong value may crash the game or otherwise cause issues.",
@@ -208,13 +212,13 @@ Warning: Entering the wrong value may crash the game or otherwise cause issues."
 302535920000080,"Apply and close dialog (Arrow keys and Enter/Esc can also be used).",
 302535920000081,"Double right-click to set without closing dialog.",
 302535920000082,"Check this for ""All of type"" to only apply to connected grid.",
-0,"_uiMonitorInfoDlg.lua",
+0,"MonitorInfoDlg.lua",
 302535920000085,"Auto-refresh list every ""Amount"".",
 302535920000086,"Manually refresh the list.",
 302535920000087,"Refresh delay in ms",
 302535920000088,"Double right-click to open list of objects.",
 302535920000089,"Nothing left",
-0,"_uiObjectManipulator.lua",
+0,"ObjectManipulator.lua",
 302535920000091,"Auto-refresh list every second (turn off to edit values).",
 302535920000092,"Refresh list.",
 302535920000093,"Goto Obj",
@@ -431,8 +435,7 @@ Double right-click selected mystery to review past messages.",
 302535920000290,"Time duration has been set to 0 (you still need to complete the requirements).
 
 Wait for a Sol or two for it to update (should give a popup msg).",
-302535920000291,"Waiting for",
-302535920000292,"to finish.
+302535920000291,"Waiting for %s to finish.
 
 Skip it?",
 302535920000293,"Unlocked all buildings for construction.",
@@ -1423,6 +1426,6 @@ Excluding waste rock in something other than a dumping site.",
 302535920001235,"can hold.",
 302535920001236,"Double amount of reneagades this station can negate (currently",
 302535920001237,"Reselect to update amount.",
-0,"_uiMultiLineText.lua",
+0,"MultiLineText.lua",
 302535920000721,"Checkbox",
 302535920000827,"Check this to overwrite file instead of appending to it.",
