--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation
-302535920000292,,
-302535920000882,,
 302535920001014,,
 302535920001019,,
 302535920001020,,
@@ -736,6 +734,8 @@ The map disaster settings don't do jack.",
 302535920000579,"Storage Mechanized Depots",
 302535920000580,"Change mechanized depot storage capacity.",
 0,"FixesMenu.lua",
+302535920000292,"Reset Rovers With Drones Stuck Inside",
+302535920000882,"If you have rovers with drones stuck inside them, this will fix them (clone and delete).",
 302535920000939,"Fix certain freezing issues (mouse still moves screen, keyboard doesn't), will lower comfort by about 20.",
 302535920000055,"Reset All Colonists",
 302535920000581,"Toggle Collisions On Selected Object",
