--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,8 +1,9 @@
-ID,Text,Translation
-302535920001014,,
-302535920001019,,
-302535920001020,,
-302535920001023,,
+ID,Text
+302535920001014,"Hide Cheats Menu",
+302535920001019,"This will hide the Cheats menu, Use F2 to see it again, and use Ctrl-F2 to toggle the Cheats selection panel.",
+302535920001020,"Read me",
+302535920001023,"This WILL take awhile if you open it in dump text.",
+302535920001029,,
 302535920001025,,
 302535920001026,,
 302535920001027,,
@@ -830,6 +831,7 @@ Not noticeable unless using higher zoom.",
 302535920000655,"Toggle Cursor",
 302535920000656,"Toggle between moving camera and selecting objects.",
 0,"HelpMenu.lua",
+302535920001028,"Have a Tutorial, or general info you'd like to add?",
 302535920000657,"Screenshot",
 302535920000658,"Write screenshot",
 302535920000659,"Screenshot Upsampled",
@@ -1215,8 +1217,6 @@ Some settings can't be changed in the editor, but you can manually add them in t
 302535920001021,"03 Low (100) < Menu Option",
 302535920001022,"04 Medium (150) < Menu Option",
 302535920001024,"06 Ultra (200) < Menu Option",
-302535920001028,,
-302535920001029,,
 302535920001030,"Doesn't seem to use much CPU, but load times will probably increase. I've limited max to 6000, if you've got a Nvidia Volta and want to use more memory then do it through the settings file.
 
 And yes Medium is using a higher setting than High...",
