Expanded Cheat Menu:
Changed:
Tidied up Help menu.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,10 +1,5 @@
 ID,Text
-302535920001014,"Hide Cheats Menu",
-302535920001019,"This will hide the Cheats menu, Use F2 to see it again, and use Ctrl-F2 to toggle the Cheats selection panel.",
-302535920001020,"Read me",
-302535920001023,"This WILL take awhile if you open it in dump text.",
-302535920001029,,
-302535920001025,,
+302535920001025,"Help! I'm with stupid!",
 302535920001026,,
 302535920001027,,
 302535920001040,,
@@ -831,6 +826,11 @@ Not noticeable unless using higher zoom.",
 302535920000655,"Toggle Cursor",
 302535920000656,"Toggle between moving camera and selecting objects.",
 0,"HelpMenu.lua",
+302535920001014,"Hide Cheats Menu",
+302535920001019,"This will hide the Cheats menu, Use F2 to see it again, and use Ctrl-F2 to toggle the Cheats selection panel.",
+302535920001020,"Read me",
+302535920001023,"This WILL take awhile if you open it in dump text.",
+302535920001029,"Change log",
 302535920001028,"Have a Tutorial, or general info you'd like to add?",
 302535920000657,"Screenshot",
 302535920000658,"Write screenshot",
@@ -1272,7 +1272,7 @@ Do this, don't do that, can't you read the sign?",
 302535920001078,"Hover mouse over menu item to get description and enabled status
 If there isn't a status then it's likely a list of options to choose from
 
-For any issues; please report them to my github/nexusmods page, or email",
+For any issues; please report them to my github/steams/nexusmods page, or email",
 0,"MiscFunc.lua",
 302535920000347,"Star Dome",
 302535920000351,"Hexa Dome",
