Expanded Cheat Menu:
Changed:
SM is fixing a bug in next update, so I added a version check for it.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -146,7 +146,7 @@ You can copy and paste numbers if you want (click item again after picking).",
 302535920000029,"Error: Cannot find any",
 302535920000032,"Select a resource to find",
 0,"Examine.lua",
-302535920001001,"Slight issue with %s you may safely ignore the following error or three.",
+302535920001001,"ECM: Slight issue with %s you may safely ignore the following error or three.",
 302535920000955,"Handle",
 302535920000520,"Parents",
 302535920000525,"Ancestors",
