Expanded Cheat Menu:
Added:
Mod Log to Console Scripts: No more having to quit to see mod errors.

Changed:
Write logs just writes console output now, I don't think I've ever seen anything useful in DebugLog.log (if you have let me know I'll add it back).

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text
-302535920001025,"Help! I'm with stupid!",
-302535920001026,,
 302535920001027,,
 302535920001040,,
 302535920001071,,
@@ -826,6 +824,7 @@ Not noticeable unless using higher zoom.",
 302535920000655,"Toggle Cursor",
 302535920000656,"Toggle between moving camera and selecting objects.",
 0,"HelpMenu.lua",
+302535920001025,"Help! I'm with stupid!",
 302535920001014,"Hide Cheats Menu",
 302535920001019,"This will hide the Cheats menu, Use F2 to see it again, and use Ctrl-F2 to toggle the Cheats selection panel.",
 302535920001020,"Read me",
@@ -915,6 +914,7 @@ restart to set disabled.",
 302535920000732,"Childkiller (You evil, evil person.)",
 302535920000733,"Open a preset in the editor.",
 0,"ReplacedFunctions.lua",
+302535920001026,"Mod Log",
 302535920000563,"Copy Log Text",
 302535920000692,"Log is blank.",
 302535920000734,"Clear Log",
