Expanded Cheat Menu:
Added:
Windowed console log

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,20 +1,7 @@
 ID,Text,Translation
-302535920001040,Drone Wrong Angle,
-302535920001071,Drone Charges From Rover Wrong Angle,
-302535920001073,Console,
-302535920001080,Console History Items,
-302535920001089,Settings & Commands,
-302535920001091,Flushs log to disk and displays in console log.,
-302535920001112,Console Log,
-302535920001119,Toggle showing the console log on screen.,
-302535920001120,Console Log Window,
-302535920001133,Toggle showing the console log window on screen.,
-302535920001138,Execute this command in the console.,
-302535920001152,Clear out the console log.,
-302535920001154,Displays the log text in a window you can copy sections from.,
-302535920001159,Any .lua files contained in %s.,
-302535920000071,Show Mods Log,
-302535920000870,Shows any errors from loading mods in console log.,
+302535920000865,Toggle Trans,
+302535920000485,,
+302535920000486,,
 302535920001201,,
 302535920001206,,
 302535920001208,,
@@ -106,6 +93,13 @@ ID,Text,Translation
 302535920001092,Pins,
 302535920000471,Object Manipulator,
 302535920000004,Dump,
+302535920001120,Console Log Window,
+302535920000734,Clear Log,
+302535920001026,Show File Log,
+302535920001091,Flushes log to disk and displays in console log.,
+302535920001152,Clear out the console log.,
+302535920001154,Displays the log text in a window you can copy sections from.,
+302535920000563,Copy Log Text,
 302535920000201,Active,
 302535920000001,"F2 to toggle cheats menu
 ""Debug>Console: Toggle On-Screen Log"" to toggle this console history.",
@@ -626,9 +620,7 @@ It's not as if domes need to be where you placed them (people will just ignore i
 302535920000481,Open In Ged Object Editor,
 302535920000482,It edits stuff?,
 302535920000483,Write Logs,
-302535920000484,Write debug/console logs to AppData/logs.,
-302535920000485,Console: Toggle On-Screen Log,
-302535920000486,Show console history on screen.,
+302535920000484,Write console logs to AppData/logs (writes immediately).,
 302535920000487,Delete All Of Selected Object,
 302535920000488,Will ask for confirmation beforehand (will not delete domes).,
 302535920000489,Delete Object(s),
@@ -719,6 +711,8 @@ The map disaster settings don't do jack.",
 302535920000578,Change waste storage depot capacity.,
 302535920000579,Storage Mechanized Depots,
 302535920000580,Change mechanized depot storage capacity.,
+302535920001040,Drone Wrong Angle,
+302535920001071,Drone Charges From Rover Wrong Angle,
 302535920000292,Reset Rovers With Drones Stuck,
 302535920000882,"If you have rovers with drones stuck inside/outside them, this will fix them (clone and delete ftw).
 
@@ -900,10 +894,6 @@ restart to set disabled.",
 302535920000731,Deutsche Gesellschaft für Rassenhygiene,
 302535920000732,"Childkiller: You evil, evil person.",
 302535920000733,Open a preset in the editor.,
-302535920001026,Show File Log,
-302535920000563,Copy Log Text,
-302535920000692,Log is blank (well not anymore).,
-302535920000734,Clear Log,
 302535920000735,Timer delay skipped,
 302535920000736,": Whoops somebody broke the rocket, guess you're stuck on mars.",
 302535920000737,Water? Like out of the toilet?,
@@ -1044,8 +1034,7 @@ Sounds like a broked save; send me the file and I'll take a look",
 302535920000861,Current State,
 302535920000862,Object Spawner (EntityData list),
 302535920000863,Objects are unselectable with mouse cursor (hover mouse over and use Delete Object).,
-302535920000864,Write debug/console logs,
-302535920000865,: Those who cannot remember the past are condemned to repeat it.,
+302535920000864,Write console logs,
 302535920000866,Set MissionParams NewMap,
 302535920000867,"Attention: You must close this dialog for these settings to take effect on new map!
 
@@ -1397,3 +1386,14 @@ Excluding waste rock in something other than a dumping site.",
 302535920001236,Double amount of reneagades this station can negate (currently: %s) < Reselect to update amount.,
 302535920000721,Checkbox,
 302535920000827,Check this to overwrite file instead of appending to it.,
+302535920001073,Console,
+302535920001080,Console History Items,
+302535920001089,Settings & Commands,
+302535920001112,Console Log,
+302535920001119,Toggle showing the console log on screen.,
+302535920001133,Toggle showing the console log window on screen.,
+302535920001138,Execute this command in the console.,
+302535920001159,Any .lua files contained in %s.,
+302535920000071,Show Mods Log,
+302535920000870,Shows any errors from loading mods in console log.,
+302535920000692,Log is blank (well not anymore).,
