Expanded Cheat Menu: Added: Debug>Debug FX: Bunch of hopefully useful info in console log. Fixes>Remove Blue Grid Marks: Gets rid of any selection grids for stuff that isn't selected.
China Mission Goal Proper Sol:
The text says 100 Sols to complete, the actual value is 80, this changes it to 100.

Triboelectric Scrubbers Clean Dome Buildings:
They removed this in the Spirit Update.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,13 +1,4 @@
 ID,Text,Translation
-302535920000485,Flatten Terrain Toggle,
-302535920000486,Use the shortcut to turn this on as it will use where your cursor is as the height to flatten to.,
-302535920001163,"Flatten height has been choosen %s, press shortcut again to update buildable.",
-302535920001164,"Flattening has been stopped, now updating buildable.",
-302535920001175,,
-302535920001176,,
-302535920001184,,
-302535920001193,,
-302535920001197,,
 302535920001201,,
 302535920001206,,
 302535920001208,,
@@ -32,6 +23,7 @@ ID,Text,Translation
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920001175,Debug FX,
 302535920000892,Screenshot,
 302535920000893,Interface,
 302535920000922,Fixes,
@@ -590,6 +582,10 @@ Not permanent.",
 302535920000446,Colonists Death Age,
 302535920000447,Change the age at which colonists die.,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920001176,Toggle showing FX debug info in console.,
+302535920001184,Particles,
+302535920000485,Flatten Terrain Toggle,
+302535920000486,Use the shortcut to turn this on as it will use where your cursor is as the height to flatten to.,
 302535920000449,Attach Spots Toggle,
 302535920000450,Toggle showing attachment spots on selected object.,
 302535920000451,Measure Tool,
@@ -723,6 +719,8 @@ The map disaster settings don't do jack.",
 302535920000578,Change waste storage depot capacity.,
 302535920000579,Storage Mechanized Depots,
 302535920000580,Change mechanized depot storage capacity.,
+302535920001193,Remove Blue Grid Marks,
+302535920001197,"If you have any buildings with the selection grid around it, and you don't have it selected.",
 302535920001040,Drone Wrong Angle,
 302535920001071,Drone Charges From Rover Wrong Angle,
 302535920000292,Reset Rovers With Drones Stuck,
@@ -1031,6 +1029,8 @@ Warning: Disable births or else...",
 302535920000847,Select traits and click Ok to toggle status.,
 302535920000848,Fire Workers,
 302535920000849,Will also fire workers with the traits from all,
+302535920001163,"Flatten height has been choosen %s, press shortcut again to update buildable.",
+302535920001164,"Flattening has been stopped, now updating buildable.",
 302535920000850,Reload lua done,
 302535920000851,"isn't an object?
 Sounds like a broked save; send me the file and I'll take a look",
