Expanded Cheat Menu:
Added:
Game>Autosave Interval: Change how many Sols to between autosaving.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation
-302535920001201,,
-302535920001206,,
 302535920001208,,
 302535920001219,,
 302535920001222,,
@@ -23,6 +21,7 @@ ID,Text,Translation
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920001201,Interval,
 302535920001175,Debug FX,
 302535920000892,Screenshot,
 302535920000893,Interface,
@@ -740,7 +739,8 @@ This will do a little copy n paste fix (they'll keep the same traits/whatnot).",
 302535920000587,Remove Missing Class Objects (Warning),
 302535920000588,"May crash game, SAVE FIRST. These are probably from mods that were removed (if you're getting a PinDlg error then this should fix it).",
 302535920000589,Fire Most Fixes,
-302535920000590,"Fires all the fixes in the ""Most"" menu (nuke 'em from orbit and all that).",
+302535920000590,"Fires all the fixes in the ""Most"" menu (nuke 'em from orbit and all that).
+Should be safe to use without breaking anything.",
 302535920000591,Colonists Trying To Board Rocket Freezes Game,
 302535920000592,"Doesn't fix the underlying cause, but it works.",
 302535920000593,Remove Particles With Null Polylines,
@@ -782,6 +782,7 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs.",
 302535920000620,If any colonists are black cubes click this.,
 302535920000621,Align All Buildings To Hex Grid,
 302535920000622,If you have any buildings that aren't aligned to the hex grids use this.,
+302535920001206,Change how many Sols between autosaving.,
 302535920000845,Render,
 302535920000265,No More Pulsating Pins,
 302535920000335,Pins will no longer do the pulsating motion (hover over to stop).,
