--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -584,7 +584,9 @@ Not permanent.",
 302535920001176,Toggle showing FX debug info in console.,
 302535920001184,Particles,
 302535920000485,Flatten Terrain Toggle,
-302535920000486,Use the shortcut to turn this on as it will use where your cursor is as the height to flatten to.,
+302535920000486,"Use the shortcut to turn this on as it will use where your cursor is as the height to flatten to.
+
+Use Shift + Arrow keys to change the height/radius.",
 302535920000449,Attach Spots Toggle,
 302535920000450,Toggle showing attachment spots on selected object.,
 302535920000451,Measure Tool,
