Expanded Cheat Menu:
Added:
Debug>Export Colonist Data To CSV: Makes it easier for spreadsheet players to get their fix.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation
-302535920001208,,
-302535920001219,,
 302535920001222,,
 302535920001229,,
 302535920001235,,
@@ -581,6 +579,8 @@ Not permanent.",
 302535920000446,Colonists Death Age,
 302535920000447,Change the age at which colonists die.,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920001208,Export Colonist Data To CSV,
+302535920001219,Exports data about colonists to AppData/Colonists.csv,
 302535920001176,Toggle showing FX debug info in console.,
 302535920001184,Particles,
 302535920000485,Flatten Terrain Toggle,
