Expanded Cheat Menu:
Changed:
Forgot to make the CSV strings translatable.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,8 +1,4 @@
 ID,Text,Translation
-302535920001222,,
-302535920001229,,
-302535920001235,,
-302535920001237,,
 302535920001238,,
 302535920001239,,
 302535920001240,,
@@ -19,6 +15,7 @@ ID,Text,Translation
 302535920000887,ECM,
 302535920000000,Expanded Cheat Menu,
 302535920000104,Expanded CM,
+302535920000955,Handle,
 302535920001201,Interval,
 302535920001175,Debug FX,
 302535920000892,Screenshot,
@@ -143,7 +140,6 @@ You can copy and paste numbers if you want (click item again after picking).",
 302535920000029,Error: Cannot find any,
 302535920000032,Select a resource to find,
 302535920001001,ECM: Slight issue with %s you may safely ignore the following error or three.,
-302535920000955,Handle,
 302535920000520,Parents,
 302535920000525,Ancestors,
 302535920000553,Examine parent and ancestor objects.,
@@ -1031,6 +1027,10 @@ Warning: Disable births or else...",
 302535920000847,Select traits and click Ok to toggle status.,
 302535920000848,Fire Workers,
 302535920000849,Will also fire workers with the traits from all,
+302535920001222,Age,
+302535920001229,Last Meal,
+302535920001235,Last Rest,
+302535920001237,Position,
 302535920001163,"Flatten height has been choosen %s, press shortcut again to update buildable.",
 302535920001164,"Flattening has been stopped, now updating buildable.",
 302535920000850,Reload lua done,
