Expanded Cheat Menu:
Added:
Debug>Delete All Rocks: Some people just don't like rocks.

ExpandedCheatMenu@choggi.org

--- a/Expanded Cheat Menu/Locales/English.csv
+++ b/Expanded Cheat Menu/Locales/English.csv
@@ -1,6 +1,4 @@
 ID,Text,Translation
-302535920000864,,
-302535920001238,,
 302535920001239,,
 302535920001240,,
 302535920001241,,
@@ -576,6 +574,8 @@ Not permanent.",
 302535920000446,Colonists Death Age,
 302535920000447,Change the age at which colonists die.,
 302535920000448,"I'm afraid it could be 9/11 times 1,000.",
+302535920000864,Delete All Rocks,
+302535920001238,Removes any rocks for that smooth map feel (will take about 30 seconds).,
 302535920001208,Export Colonist Data To CSV,
 302535920001219,Exports data about colonists to AppData/Colonists.csv,
 302535920001176,Toggle showing FX debug info in console.,
