Expanded Cheat Menu:
Fixed:
If you noticed more nils then usual in examine.

ExpandedCheatMenu@choggi.org

--- a/Mods ChoGGi/Show Mod Manager GoG (Linux OSX)/changes.txt
+++ b/Mods ChoGGi/Show Mod Manager GoG (Linux OSX)/changes.txt
@@ -1,4 +1,6 @@
-0.2
-version bump for curo update.
+0.4
+The tutorial button messed it up (won't happen again for new buttons).
 0.3
 Now retrieves the correct Assets Revision, so no more need for version bumping.
+0.2
+version bump for curo update.
